20040506 version: exiftags 0.99.1
20040506 fixed exiftime install oversight
20040504 added Canon camera actuations (thanks: Stan Jirman)
20040430 version: exiftags 0.99
20040420 added Panasonic maker note support (thanks: Tom Hughes)
20040410 improved error messages in exifcom
20040408 added exiftime utility to display and write date/time tags
20040403 added Leica maker note support
20040403 slight hack to use Canon's subject distance tag (units unclear)
20040403 fixed Canon maker function parameter mismatch
20040403 updated for Exif 2.21 draft spec (minor changes)
20040403 fixed problem with images without IFD1
20040403 additional bounds checks on some tags (thanks: Michael McCandless)
20040403 fixed negative fraction display
20040227 added Asahi/Pentax maker note support
20031101 prevent looping when a tag refers to its own IFD
20030815 version: exiftags 0.98
20030807 fixed some Fuji, Minolta, Nikon byte order bugs/dependencies
20030806 internal code cleanup to nicely support multiple tag sets
20030806 internal code cleanup to allow different IFD byte orders
20030806 added Sanyo maker note support
20030805 added support for Nikon D1X
20030805 fixed crash on Minolta DiMAGE EX
20030802 fixed offset check bug for ascii strings
20030801 added support for GPS info tags
20030622 fixed crashes on badly formed comments, type mismatches
20030622 added Canon 10D custom function support (thanks: Jason Montojo)
20030211 tweaked Canon 1D/1Ds custom function support
20030204 version: exiftags 0.97
20030204 fixed byte order bug displaying Exif version
20030128 assign bad or senseless tags separate dump level
20030124 internal code cleanups
20030123 assign overridden tags separate dump level
20030121 support for Canon EOS-1D & 1DS (thanks: Stan Jirman)
20030120 added -s option to customize delimiter
20030120 support for multiple shorts in a tag (e.g., subject area)
20030112 added Minolta maker note support (thanks: Javier Crespo)