@@ -29,7 +29,7 @@
 .\" (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
 .\" THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.\" $Id: exiftags.1,v 1.25 2004/04/20 22:18:56 ejohnst Exp $
+.\" $Id: exiftags.1,v 1.26 2004/09/15 23:35:55 ejohnst Exp $
 .\"
 .SH NAME
 .B exiftags
@@ -111,6 +111,8 @@ Olympus
 Panasonic
 .br
 Sanyo
+.br
+Sigma
 .PP
 If you wish support for additional
 manufacturers or cameras, please send any information you have
